<?xml version="1.0"?>
<package>
  <name>solverlqr</name>
  <version>1.0.0</version>
  <description>Feedback Controller Routine</description>
  <maintainer email="bponton@tue.mpg.de">Autonomous Motion Lab - MPI-IS</maintainer>
  <license>GNU-GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>solver</build_depend>
  <build_depend>yaml_cpp</build_depend>
  <build_depend>pybind11</build_depend>

  <run_depend>solver</run_depend>
  <run_depend>yaml_cpp</run_depend>
  <run_depend>pybind11</run_depend>
  
  <export>
  </export>
</package>